# tracing-bench

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config
src/: dynamic.rs  main.rs  util.rs
