[package]
name = "tracing-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
getopts = "0.2.21"
lazy_static = "1.4.0"
tracing = "^0.1.36"
tracing-appender = "0.2.2"

[dependencies.tracing-subscriber]
version = "^0.3.15"
features = ["env-filter"]

[features]
default = ["registry"]
registry = []

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
debug = true
